add shuffle button, also play and pause

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <div class="container">
+        <img class="shuffler" id="shuffler" title="Shuffle the song list." src="./img/shuffle.png">
+        <img class="pause" id="pause" src="./img/pause.png">
+        <img class="play" id="play" src="./img/play.png">
         <img class="next" src="./img/next.png">
         <img class="prev" src="./img/next.png">
         <div id="lyrics-container">
